Update issue 18 Add unitary and intragration test of service layer. Now it isn't working all test.